--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
 <html>
-  <iframe src="https://m2-network.000webhostapp.com/"></iframe>
+  <body>
+    <iframe src="https://m2-network.000webhostapp.com/"></iframe>
+  </body>
 </html>
