--- a/index.html
+++ b/index.html
@@ -1,4 +1,17 @@
 <html>
+  <head>
+    <style>
+      iframe {
+        display: block;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        border: none;
+    }
+    </style>
+  </head>
   <body>
     <iframe src="https://m2-network.000webhostapp.com/"></iframe>
   </body>
