--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
     </style>
   </head>
   <body>
-    <iframe src="https://m2-network.000webhostapp.com/"></iframe>
+    <iframe src="https://m2-network.000webhostapp.com/" name="view"></iframe>
   </body>
 </html>
